- Fixed bug #47035 (dns_get_record returns a garbage byte at the end of a TXT record)